--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js"
-    },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.3"
+  }
 }
